--- a/src/app/aboutme/components/bio-page/bio-page.component.html
+++ b/src/app/aboutme/components/bio-page/bio-page.component.html
@@ -1,7 +1,7 @@
-<div class="text-white min-h-screen flex items-center justify-center px-2 bg-no-repeat bg-[url('assets/background-pink.png')] bg-cover">
-  <div class="flex flex-col md:flex-row items-center max-w-6xl w-full gap-8 mx-15">
+<div class="px-10 text-white min-h-screen flex items-center justify-center bg-no-repeat bg-[url('assets/background-pink.png')] bg-cover">
+  <div class="flex flex-col md:flex-row items-center max-w-6xl w-full gap-8">
     <!-- Texto -->
-    <div class="flex-1">
+    <div class="flex-1 my-6">
       <h1 class="text-5xl md:text-6xl font-bold leading-tight title">
         Manuel Alejandro <br />
         Mora Meneses
@@ -9,7 +9,7 @@
       <!-- <p class="text-xl mt-2 text-gray-300 transition-colors durarion-1000" [style.color]="textColor()">Ingeniero en Computación</p> -->
       <p class="text-xl mt-2 font-bold bg-clip-text text-transparent bg-gradient-to-r from-pink-400 to-purple-400 title">Ingeniero en Computación</p>
 
-      <p class="mt-6 text-lg text-white mr-20 title">
+      <p class="text-lg text-white mr-20 title pb-10">
         Desarrollador Full Stack Jr con experiencia en el diseño, creación y
         mantenimiento de sitios web y APIs. Me caracterizo por ser una persona
         responsable, autodidacta con gran ímpetu en superarme. Buenas habilidades
